Updates for CProS S1/S3 processor integration, bug fixes:
- New enumeration JobOrderVersion
- New attributes jobOrderVersion and useInputFileTimeIntervals for
Processor class
- Planner updated to propagate Job Order version to JOF XML file
generation
- Error corrected in ConfigurationManager, where the mission was
accessed before loaded
- User Manager now returns "null" password hash instead of placeholder
string
- "clear" command now works in CLI for Windows CMD and PowerShell